--- a/style.css
+++ b/style.css
@@ -14,18 +14,35 @@ body {
 #mainpage {
     height:100vh;
     margin-top: 2rem;
-    background: rgb(228,244,241);
-    background: linear-gradient(90deg, rgba(228,244,241,1) 5%, rgba(201,231,200,1) 100%);
+    background-color: #2F2FA1;
 }
 
-#About {
-    background: rgb(228,244,241);
-    background: linear-gradient(90deg, rgba(228,244,241,1) 5%, rgba(201,231,200,1) 100%);
+#About , #Education , #Skill , #Contact{
+    background-color: #2F2FA1;
 }
 
-#Education {
-    background: rgb(228,244,241);
-    background: linear-gradient(90deg, rgba(228,244,241,1) 5%, rgba(201,231,200,1) 100%);
+#About h1 , #Education h1 , #Skill h1 , #work h1 , #Contact h1 {
+    color: #ff6183;
+    text-shadow: 2px 2px #b82243;
+}
+
+.skill-head-text {
+    text-shadow: 2px 2px #F64C71;
+    color: white;
+}
+
+.history p , .education-text {
+    color:whitesmoke;
+}
+
+.education-head-text , .skill-container h1{
+    color: white;
+    text-shadow: 4px 4px #563D67;
+    font-weight: bold;
+}
+
+.skill-container {
+    background: #EAEAEA;
 }
 
 .hero {
@@ -34,6 +51,18 @@ body {
     width: auto;
     object-fit: cover;
     border-radius: 10rem;
+}
+
+.herotext {
+    color: white;
+}
+
+.herosub {
+    color: aquamarine;
+}
+
+#heroname {
+    color: #F64C71;
 }
 
 #Hero2 {
@@ -72,12 +101,16 @@ body {
 }
 
 #mynav {
-    background: rgb(138,185,109);
-    background: linear-gradient(90deg, rgba(138,185,109,1) 0%, rgb(106, 165, 69) 100%);
+    background: #242582;
 }
 
 .contactIcons {
-    color: #496e33;
+    color: whitesmoke;
+}
+
+.contactText {
+    color: whitesmoke;
+
 }
 
 .form-container {
@@ -87,7 +120,7 @@ body {
 }
 
 .nav-item:hover {
-    background-color: #A6D393;
+    background-color: #F64C71;
     border-radius: 5rem;
     transition: 1s ease;
 }
@@ -102,9 +135,29 @@ body {
     transition: opacity ease-in 0.5s;
 }
 
-@media screen and (min-width: 770px) and (max-width: 1200px) {
+#work {
+    background-color: #2F2FA1;
+}
+
+.skill-box {
+    color: white;
+}
+
+.form-label {
+    color: white;
+}
+
+.copyright {
+    background-color: #242582;
+    color: white;
+}
+
+@media screen and (min-width: 770px) and (max-width: 2000px) {
     .hero {
         height: 35rem;
+    }
+    .imagezone {
+        margin-top: 5rem;
     }
 }
 @media screen and (max-width: 769px) {
